--- a/series.conf
+++ b/series.conf
@@ -12173,6 +12173,7 @@
 	patches.suse/media-s5p-mfc-remove-an-unused-uninitialized-variabl.patch
 	patches.suse/media-venus-firmware-Use-correct-reset-sequence-for-.patch
 	patches.suse/media-i2c-mt9v111-fix-incorrect-type-for-ret.patch
+	patches.suse/media-uvcvideo-Mark-invalid-entities-with-id-UVC_INV.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
