--- a/series.conf
+++ b/series.conf
@@ -12165,6 +12165,7 @@
 	patches.suse/media-ti-j721e-csi2rx-Use-devm_of_platform_populate.patch
 	patches.suse/media-ti-j721e-csi2rx-Fix-source-subdev-link-creatio.patch
 	patches.suse/media-mc-Fix-MUST_CONNECT-handling-for-pads-with-no-.patch
+	patches.suse/media-st-delta-avoid-excessive-stack-usage.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
