--- a/series.conf
+++ b/series.conf
@@ -12171,6 +12171,7 @@
 	patches.suse/media-pci-mg4b-fix-uninitialized-iio-scan-data.patch
 	patches.suse/media-cec-extron-da-hd-4k-plus-drop-external-module-.patch
 	patches.suse/media-s5p-mfc-remove-an-unused-uninitialized-variabl.patch
+	patches.suse/media-venus-firmware-Use-correct-reset-sequence-for-.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
