--- a/series.conf
+++ b/series.conf
@@ -12167,6 +12167,7 @@
 	patches.suse/media-mc-Fix-MUST_CONNECT-handling-for-pads-with-no-.patch
 	patches.suse/media-st-delta-avoid-excessive-stack-usage.patch
 	patches.suse/media-cx18-Add-missing-check-after-DMA-map.patch
+	patches.suse/media-pci-ivtv-Add-missing-check-after-DMA-map.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
