--- a/series.conf
+++ b/series.conf
@@ -12187,6 +12187,7 @@
 	patches.suse/wifi-mt76-mt7996-Convert-mt7996_wed_rro_addr-to-LE.patch
 	patches.suse/wifi-mt76-mt7915-fix-mt7981-pre-calibration.patch
 	patches.suse/wifi-mac80211-fix-Rx-packet-handling-when-pubsta-inf.patch
+	patches.suse/wifi-rtw89-avoid-circular-locking-dependency-in-ser_.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
