--- a/series.conf
+++ b/series.conf
@@ -12180,6 +12180,7 @@
 	patches.suse/media-uvcvideo-Mark-invalid-entities-with-id-UVC_INV.patch
 	patches.suse/media-b2c2-Fix-use-after-free-causing-by-irq_check_w.patch
 	patches.suse/media-tuner-xc5000-Fix-use-after-free-in-xc5000_rele.patch
+	patches.suse/wifi-mwifiex-send-world-regulatory-domain-to-driver.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
