--- a/series.conf
+++ b/series.conf
@@ -11061,6 +11061,7 @@
 	patches.suse/soc-qcom-rpmh-rsc-Add-RSC-version-4-support.patch
 	patches.suse/soc-qcom-pmic_glink-fix-OF-node-leak.patch
 	patches.suse/mmc-rtsx_usb_sdmmc-Fix-error-path-in-sd_set_power_mo.patch
+	patches.suse/mmc-sdhci-cadence-add-Mobileye-eyeQ-support.patch
 	patches.suse/mmc-sdhci-msm-Ensure-SD-card-power-isn-t-ON-when-car.patch
 	patches.suse/Docs-ABI-Fix-sysfs-kernel-address_bits-path.patch
 	patches.suse/lpfc-don-t-use-file-f_path.dentry-for-comparisons.patch
