--- a/series.conf
+++ b/series.conf
@@ -12190,6 +12190,7 @@
 	patches.suse/wifi-rtw89-avoid-circular-locking-dependency-in-ser_.patch
 	patches.suse/wifi-ath12k-fix-the-fetching-of-combined-rssi.patch
 	patches.suse/wifi-ath12k-fix-wrong-logging-ID-used-for-CE.patch
+	patches.suse/wifi-ath11k-fix-NULL-dereference-in-ath11k_qmi_m3_lo.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
