--- a/series.conf
+++ b/series.conf
@@ -12198,6 +12198,7 @@
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
 	patches.suse/Bluetooth-hci_sync-Fix-using-random-address-for-BIG-.patch
+	patches.suse/net-usb-Remove-disruptive-netif_wake_queue-in-rtl815.patch
 	patches.suse/drivers-base-node-handle-error-properly-in-register_.patch
 	patches.suse/maple_tree-fix-MAPLE_PARENT_RANGE32-and-parent-point.patch
 	patches.suse/maple_tree-fix-testing-for-32-bit-builds.patch
