--- a/series.conf
+++ b/series.conf
@@ -12189,6 +12189,7 @@
 	patches.suse/wifi-mac80211-fix-Rx-packet-handling-when-pubsta-inf.patch
 	patches.suse/wifi-rtw89-avoid-circular-locking-dependency-in-ser_.patch
 	patches.suse/wifi-ath12k-fix-the-fetching-of-combined-rssi.patch
+	patches.suse/wifi-ath12k-fix-wrong-logging-ID-used-for-CE.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
