--- a/series.conf
+++ b/series.conf
@@ -12203,6 +12203,7 @@
 	patches.suse/drivers-base-node-handle-error-properly-in-register_.patch
 	patches.suse/maple_tree-fix-MAPLE_PARENT_RANGE32-and-parent-point.patch
 	patches.suse/maple_tree-fix-testing-for-32-bit-builds.patch
+	patches.suse/drivers-base-node-fix-double-free-in-register_one_no.patch
 	patches.suse/Squashfs-fix-uninit-value-in-squashfs_get_parent.patch
 	patches.suse/Squashfs-add-additional-inode-sanity-checking.patch
 	patches.suse/Squashfs-reject-negative-file-sizes-in-squashfs_read_inode.patch
