--- a/series.conf
+++ b/series.conf
@@ -34430,6 +34430,7 @@
 	patches.suse/crypto-hisilicon-qm-check-whether-the-input-function.patch
 	patches.suse/crypto-atmel-Fix-dma_unmap_sg-direction.patch
 	patches.suse/crypto-aspeed-Fix-dma_unmap_sg-direction.patch
+	patches.suse/crypto-hisilicon-qm-set-NULL-to-qm-debug.qm_diff_reg.patch
 
 	########################################################
 	# end of sorted patches
