--- a/series.conf
+++ b/series.conf
@@ -34428,6 +34428,7 @@
 	patches.suse/crypto-keembay-Add-missing-check-after-sg_nents_for_.patch
 	patches.suse/hwrng-nomadik-add-ARM_AMBA-dependency.patch
 	patches.suse/crypto-hisilicon-qm-check-whether-the-input-function.patch
+	patches.suse/crypto-atmel-Fix-dma_unmap_sg-direction.patch
 
 	########################################################
 	# end of sorted patches
