--- a/series.conf
+++ b/series.conf
@@ -34434,6 +34434,7 @@
 	patches.suse/hwrng-ks-sa-fix-division-by-zero-in-ks_sa_rng_init.patch
 	patches.suse/HID-intel-ish-ipc-Remove-redundant-ready-check-after.patch
 	patches.suse/mtd-rawnand-omap2-fix-device-leak-on-probe-failure.patch
+	patches.suse/serial-max310x-Add-error-checking-in-probe.patch
 
 	########################################################
 	# end of sorted patches
