--- a/series.conf
+++ b/series.conf
@@ -34441,6 +34441,7 @@
 	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
 	patches.suse/uio-uio_pdrv_genirq-Remove-MODULE_DEVICE_TABLE.patch
 	patches.suse/misc-genwqe-Fix-incorrect-cmd-field-being-reported-i.patch
+	patches.suse/iio-xilinx-ams-Unmask-interrupts-after-updating-alar.patch
 
 	########################################################
 	# end of sorted patches
