--- a/series.conf
+++ b/series.conf
@@ -34436,6 +34436,7 @@
 	patches.suse/mtd-rawnand-omap2-fix-device-leak-on-probe-failure.patch
 	patches.suse/serial-max310x-Add-error-checking-in-probe.patch
 	patches.suse/tty-n_gsm-Don-t-block-input-queue-by-waiting-MSC.patch
+	patches.suse/usb-host-max3421-hcd-Fix-error-pointer-dereference-i.patch
 
 	########################################################
 	# end of sorted patches
