--- a/series.conf
+++ b/series.conf
@@ -34431,6 +34431,7 @@
 	patches.suse/crypto-atmel-Fix-dma_unmap_sg-direction.patch
 	patches.suse/crypto-aspeed-Fix-dma_unmap_sg-direction.patch
 	patches.suse/crypto-hisilicon-qm-set-NULL-to-qm-debug.qm_diff_reg.patch
+	patches.suse/hwrng-ks-sa-fix-division-by-zero-in-ks_sa_rng_init.patch
 
 	########################################################
 	# end of sorted patches
