--- a/series.conf
+++ b/series.conf
@@ -34427,6 +34427,7 @@
 	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
 	patches.suse/crypto-keembay-Add-missing-check-after-sg_nents_for_.patch
 	patches.suse/hwrng-nomadik-add-ARM_AMBA-dependency.patch
+	patches.suse/crypto-hisilicon-qm-check-whether-the-input-function.patch
 
 	########################################################
 	# end of sorted patches
