--- a/series.conf
+++ b/series.conf
@@ -34442,6 +34442,7 @@
 	patches.suse/uio-uio_pdrv_genirq-Remove-MODULE_DEVICE_TABLE.patch
 	patches.suse/misc-genwqe-Fix-incorrect-cmd-field-being-reported-i.patch
 	patches.suse/iio-xilinx-ams-Unmask-interrupts-after-updating-alar.patch
+	patches.suse/iio-xilinx-ams-Fix-AMS_ALARM_THR_DIRECT_MASK.patch
 
 	########################################################
 	# end of sorted patches
