--- a/series.conf
+++ b/series.conf
@@ -34438,6 +34438,7 @@
 	patches.suse/tty-n_gsm-Don-t-block-input-queue-by-waiting-MSC.patch
 	patches.suse/usb-host-max3421-hcd-Fix-error-pointer-dereference-i.patch
 	patches.suse/usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-through-s.patch
+	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
 
 	########################################################
 	# end of sorted patches
