--- a/series.conf
+++ b/series.conf
@@ -55484,6 +55484,7 @@
 	patches.suse/usb-gadget-configfs-Correctly-set-use_os_string-at-b.patch
 	patches.suse/usb-cdns3-cdnsp-pci-remove-redundant-pci_disable_dev.patch
 	patches.suse/usb-typec-tipd-Clear-interrupts-first.patch
+	patches.suse/Revert-usb-xhci-Avoid-Stop-Endpoint-retry-loop-if-th.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
