--- a/series.conf
+++ b/series.conf
@@ -55481,6 +55481,7 @@
 	patches.suse/crypto-hisilicon-re-enable-address-prefetch-after-de.patch
 	patches.suse/crypto-hisilicon-qm-request-reserved-interrupt-for-v.patch
 	patches.suse/usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
+	patches.suse/usb-gadget-configfs-Correctly-set-use_os_string-at-b.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
