--- a/series.conf
+++ b/series.conf
@@ -55477,6 +55477,7 @@
 	patches.suse/wifi-ath12k-fix-wrong-logging-ID-used-for-CE.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
 	patches.suse/Bluetooth-hci_sync-Fix-using-random-address-for-BIG-.patch
+	patches.suse/crypto-hisilicon-zip-remove-unnecessary-validation-f.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
