--- a/series.conf
+++ b/series.conf
@@ -55478,6 +55478,7 @@
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
 	patches.suse/Bluetooth-hci_sync-Fix-using-random-address-for-BIG-.patch
 	patches.suse/crypto-hisilicon-zip-remove-unnecessary-validation-f.patch
+	patches.suse/crypto-hisilicon-re-enable-address-prefetch-after-de.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
