--- a/series.conf
+++ b/series.conf
@@ -12272,6 +12272,7 @@
 	patches.suse/iio-frequency-adf4350-Fix-prescaler-usage.patch
 	patches.suse/iio-frequency-adf4350-Fix-ADF4350_REG3_12BIT_CLKDIV_.patch
 	patches.suse/iio-dac-ad5360-use-int-type-to-store-negative-error-.patch
+	patches.suse/iio-dac-ad5421-use-int-type-to-store-negative-error-.patch
 
 	########################################################
 	# end of sorted patches
