--- a/series.conf
+++ b/series.conf
@@ -12245,6 +12245,7 @@
 	patches.suse/crypto-rockchip-Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/crypto-atmel-Fix-dma_unmap_sg-direction.patch
 	patches.suse/crypto-aspeed-Fix-dma_unmap_sg-direction.patch
+	patches.suse/crypto-hisilicon-qm-set-NULL-to-qm-debug.qm_diff_reg.patch
 
 	########################################################
 	# end of sorted patches
