--- a/series.conf
+++ b/series.conf
@@ -12259,6 +12259,7 @@
 	patches.suse/usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-through-s.patch
 	patches.suse/usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
 	patches.suse/usb-gadget-configfs-Correctly-set-use_os_string-at-b.patch
+	patches.suse/usb-cdns3-cdnsp-pci-remove-redundant-pci_disable_dev.patch
 
 	########################################################
 	# end of sorted patches
