--- a/series.conf
+++ b/series.conf
@@ -12261,6 +12261,7 @@
 	patches.suse/usb-gadget-configfs-Correctly-set-use_os_string-at-b.patch
 	patches.suse/usb-cdns3-cdnsp-pci-remove-redundant-pci_disable_dev.patch
 	patches.suse/usb-typec-tipd-Clear-interrupts-first.patch
+	patches.suse/Revert-usb-xhci-Avoid-Stop-Endpoint-retry-loop-if-th.patch
 
 	########################################################
 	# end of sorted patches
