--- a/series.conf
+++ b/series.conf
@@ -12260,6 +12260,7 @@
 	patches.suse/usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
 	patches.suse/usb-gadget-configfs-Correctly-set-use_os_string-at-b.patch
 	patches.suse/usb-cdns3-cdnsp-pci-remove-redundant-pci_disable_dev.patch
+	patches.suse/usb-typec-tipd-Clear-interrupts-first.patch
 
 	########################################################
 	# end of sorted patches
