--- a/series.conf
+++ b/series.conf
@@ -12257,6 +12257,7 @@
 	patches.suse/tty-n_gsm-Don-t-block-input-queue-by-waiting-MSC.patch
 	patches.suse/usb-host-max3421-hcd-Fix-error-pointer-dereference-i.patch
 	patches.suse/usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-through-s.patch
+	patches.suse/usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
 
 	########################################################
 	# end of sorted patches
