--- a/series.conf
+++ b/series.conf
@@ -12247,6 +12247,7 @@
 	patches.suse/crypto-aspeed-Fix-dma_unmap_sg-direction.patch
 	patches.suse/crypto-hisilicon-qm-set-NULL-to-qm-debug.qm_diff_reg.patch
 	patches.suse/KEYS-X.509-Fix-Basic-Constraints-CA-flag-parsing.patch
+	patches.suse/hwrng-ks-sa-fix-division-by-zero-in-ks_sa_rng_init.patch
 
 	########################################################
 	# end of sorted patches
