--- a/series.conf
+++ b/series.conf
@@ -12242,6 +12242,7 @@
 	patches.suse/crypto-hisilicon-zip-remove-unnecessary-validation-f.patch
 	patches.suse/crypto-hisilicon-re-enable-address-prefetch-after-de.patch
 	patches.suse/crypto-hisilicon-qm-check-whether-the-input-function.patch
+	patches.suse/crypto-rockchip-Fix-dma_unmap_sg-nents-value.patch
 
 	########################################################
 	# end of sorted patches
