--- a/series.conf
+++ b/series.conf
@@ -12248,6 +12248,7 @@
 	patches.suse/crypto-hisilicon-qm-set-NULL-to-qm-debug.qm_diff_reg.patch
 	patches.suse/KEYS-X.509-Fix-Basic-Constraints-CA-flag-parsing.patch
 	patches.suse/hwrng-ks-sa-fix-division-by-zero-in-ks_sa_rng_init.patch
+	patches.suse/KEYS-trusted_tpm1-Compare-HMAC-values-in-constant-ti.patch
 
 	########################################################
 	# end of sorted patches
