--- a/series.conf
+++ b/series.conf
@@ -12275,6 +12275,7 @@
 	patches.suse/iio-dac-ad5421-use-int-type-to-store-negative-error-.patch
 	patches.suse/iio-consumers-Fix-handling-of-negative-channel-scale.patch
 	patches.suse/iio-consumers-Fix-offset-handling-in-iio_convert_raw.patch
+	patches.suse/iio-imu-inv_icm42600-Drop-redundant-pm_runtime-reini.patch
 
 	########################################################
 	# end of sorted patches
