--- a/series.conf
+++ b/series.conf
@@ -12265,6 +12265,7 @@
 	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
 	patches.suse/usb-vhci-hcd-Prevent-suspending-virtually-attached-d.patch
 	patches.suse/uio-uio_pdrv_genirq-Remove-MODULE_DEVICE_TABLE.patch
+	patches.suse/misc-genwqe-Fix-incorrect-cmd-field-being-reported-i.patch
 
 	########################################################
 	# end of sorted patches
