--- a/series.conf
+++ b/series.conf
@@ -12243,6 +12243,7 @@
 	patches.suse/crypto-hisilicon-re-enable-address-prefetch-after-de.patch
 	patches.suse/crypto-hisilicon-qm-check-whether-the-input-function.patch
 	patches.suse/crypto-rockchip-Fix-dma_unmap_sg-nents-value.patch
+	patches.suse/crypto-atmel-Fix-dma_unmap_sg-direction.patch
 
 	########################################################
 	# end of sorted patches
