--- a/series.conf
+++ b/series.conf
@@ -12263,6 +12263,7 @@
 	patches.suse/usb-typec-tipd-Clear-interrupts-first.patch
 	patches.suse/Revert-usb-xhci-Avoid-Stop-Endpoint-retry-loop-if-th.patch
 	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
+	patches.suse/usb-vhci-hcd-Prevent-suspending-virtually-attached-d.patch
 
 	########################################################
 	# end of sorted patches
