--- a/series.conf
+++ b/series.conf
@@ -11167,6 +11167,7 @@
 	patches.suse/idpf-use-reserved-RDMA-vectors-from-control-plane.patch
 	patches.suse/idpf-implement-core-RDMA-auxiliary-dev-create-init-a.patch
 	patches.suse/idpf-implement-RDMA-vport-auxiliary-dev-create-init-.patch
+	patches.suse/idpf-implement-remaining-IDC-RDMA-core-callbacks-and.patch
 	patches.suse/mwl8k-Add-missing-check-after-DMA-map.patch
 	patches.suse/wifi-mac80211-don-t-unreserve-never-reserved-chanctx.patch
 	patches.suse/wifi-cfg80211-Fix-interface-type-validation.patch
