--- a/series.conf
+++ b/series.conf
@@ -9572,6 +9572,7 @@
 	patches.suse/net-ibmveth-Refactored-veth_pool_store-for-better-ma.patch
 	patches.suse/iidc-ice-irdma-Rename-IDC-header-file.patch
 	patches.suse/iidc-ice-irdma-Rename-to-iidc_-convention.patch
+	patches.suse/iidc-ice-irdma-Break-iidc.h-into-two-headers.patch
 	patches.suse/netlink-fix-policy-dump-for-int-with-validation-call.patch
 	patches.suse/Bluetooth-ISO-Fix-not-using-SID-from-adv-report.patch
 	patches.suse/Bluetooth-btusb-Add-new-VID-PID-13d3-3630-for-MT7925.patch
