--- a/series.conf
+++ b/series.conf
@@ -11815,6 +11815,7 @@
 	patches.suse/perf-symbol-minimal-Fix-ehdr-reading-in-filename__read_bui.patch
 	patches.suse/dma-pool-Ensure-DMA_DIRECT_REMAP-allocations-are-dec.patch
 	patches.suse/idpf-add-support-for-Tx-refillqs-in-flow-scheduling-.patch
+	patches.suse/idpf-improve-when-to-set-RE-bit-logic.patch
 	patches.suse/Bluetooth-hci_event-Treat-UNKNOWN_CONN_ID-on-disconn.patch
 	patches.suse/Bluetooth-hci_event-Mark-connection-as-closed-during.patch
 	patches.suse/Bluetooth-hci_event-Detect-if-HCI_EV_NUM_COMP_PKTS-i.patch
