--- a/series.conf
+++ b/series.conf
@@ -9576,6 +9576,7 @@
 	patches.suse/ice-Replace-ice-specific-DSCP-mapping-num-with-a-ker.patch
 	patches.suse/iidc-ice-irdma-Update-IDC-to-support-multiple-consum.patch
 	patches.suse/netlink-fix-policy-dump-for-int-with-validation-call.patch
+	patches.suse/idpf-change-the-method-for-mailbox-workqueue-allocat.patch
 	patches.suse/Bluetooth-ISO-Fix-not-using-SID-from-adv-report.patch
 	patches.suse/Bluetooth-btusb-Add-new-VID-PID-13d3-3630-for-MT7925.patch
 	patches.suse/Bluetooth-btusb-Add-new-VID-PID-13d3-3584-for-MT7922.patch
