--- a/series.conf
+++ b/series.conf
@@ -9525,6 +9525,7 @@
 	patches.suse/ixgbe-apply-different-rules-for-setting-FC-on-E610.patch
 	patches.suse/ixgbe-add-E610-.set_phys_id-callback-implementation.patch
 	patches.suse/ixgbe-devlink-add-devlink-region-support-for-E610.patch
+	patches.suse/idpf-assign-extracted-ptype-to-struct-libeth_rqe_inf.patch
 	patches.suse/net-ibmveth-Indented-struct-ibmveth_adapter-correctl.patch
 	patches.suse/net-ibmveth-Reset-the-adapter-when-unexpected-states.patch
 	patches.suse/net-ibmveth-added-KUnit-tests-for-some-buffer-pool-f.patch
