--- a/series.conf
+++ b/series.conf
@@ -9579,6 +9579,7 @@
 	patches.suse/idpf-change-the-method-for-mailbox-workqueue-allocat.patch
 	patches.suse/idpf-add-initial-PTP-support.patch
 	patches.suse/virtchnl-add-PTP-virtchnl-definitions.patch
+	patches.suse/idpf-move-virtchnl-structures-to-the-header-file.patch
 	patches.suse/Bluetooth-ISO-Fix-not-using-SID-from-adv-report.patch
 	patches.suse/Bluetooth-btusb-Add-new-VID-PID-13d3-3630-for-MT7925.patch
 	patches.suse/Bluetooth-btusb-Add-new-VID-PID-13d3-3584-for-MT7922.patch
