--- a/series.conf
+++ b/series.conf
@@ -11180,6 +11180,7 @@
 	patches.suse/virtchnl2-add-flow-steering-support.patch
 	patches.suse/idpf-add-flow-steering-support.patch
 	patches.suse/idpf-add-cross-timestamping.patch
+	patches.suse/idpf-preserve-coalescing-settings-across-resets.patch
 	patches.suse/xfrm-Duplicate-SPI-Handling.patch
 	patches.suse/wifi-rtw89-Fix-rtw89_mac_power_switch-for-USB.patch
 	patches.suse/wifi-rtl8xxxu-Fix-RX-skb-size-for-aggregation-disabl.patch
