--- a/series.conf
+++ b/series.conf
@@ -11817,6 +11817,7 @@
 	patches.suse/idpf-add-support-for-Tx-refillqs-in-flow-scheduling-.patch
 	patches.suse/idpf-improve-when-to-set-RE-bit-logic.patch
 	patches.suse/idpf-simplify-and-fix-splitq-Tx-packet-rollback-erro.patch
+	patches.suse/idpf-replace-flow-scheduling-buffer-ring-with-buffer.patch
 	patches.suse/Bluetooth-hci_event-Treat-UNKNOWN_CONN_ID-on-disconn.patch
 	patches.suse/Bluetooth-hci_event-Mark-connection-as-closed-during.patch
 	patches.suse/Bluetooth-hci_event-Detect-if-HCI_EV_NUM_COMP_PKTS-i.patch
