--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1186,3 +1186,4 @@ e9c206324eeb213957a567a9d066bdeb355c7491 # pure optimization
 42988380ac67c76bb9dff8f77d7ef3eefd50b7b5 # pure cleanup
 08228941436047bdcd35a612c1aec0912a29d8cd # pure cleanup
 c94612a72ac87b0337a0d85b9263266776ed4190 # irrelevant in our configs
+e500d497c16c29304907f5de8bc79a8d4904c3e9 # spelling only
