--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1188,4 +1188,4 @@ e9c206324eeb213957a567a9d066bdeb355c7491 # pure optimization
 c94612a72ac87b0337a0d85b9263266776ed4190 # irrelevant in our configs
 e500d497c16c29304907f5de8bc79a8d4904c3e9 # spelling only
 3fdf2ec7da1c3b2ca13d2d3360f37f017558ed84 # pure cleanup
-
+a409fc1463d664002ea9bf700ae4674df03de111 # build stuff only
