--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1189,3 +1189,5 @@ c94612a72ac87b0337a0d85b9263266776ed4190 # irrelevant in our configs
 e500d497c16c29304907f5de8bc79a8d4904c3e9 # spelling only
 3fdf2ec7da1c3b2ca13d2d3360f37f017558ed84 # pure cleanup
 a409fc1463d664002ea9bf700ae4674df03de111 # build stuff only
+cb7380de9e4cbc9a24216b722ec50e092ae83036 # pure cleanup
+
