--- a/series.conf
+++ b/series.conf
@@ -12883,6 +12883,7 @@
 	patches.suse/rt-Add-documentation-describing-what-kernel-debug-options-to-add-for-testing.patch
 	patches.suse/rt-Add-helper-script-to-refresh-RT-configs-based-on-the-parent.patch
 	patches.suse/dm-table-check-BLK_FEAT_ATOMIC_WRITES-inside-limits_.patch
+	patches.kabi/mm-memory-tiering-fix-PGPROMOTE_CANDIDATE-counting-kabi.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
