--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1180,3 +1180,11 @@ f7a4874d977bf4202ad575031222e78809a36292 # Small perf optimization
 26343ca0df715097065b02a6cddb4a029d5b9327 # Cosmetic mount option handling fix
 d7b0befd09320e3356a75cb96541c030515e7f5f # Cosmetic remount message fix
 29ec9bed2395061350249ae356fb300dd82a78e7 # Theoretical hole punching fix for *huge* files
+ab1396af7595e7d49a3850481b24d7fe7cbdfd31 # https://bugzilla.suse.com/show_bug.cgi?id=1250082#c2
+d23569979ca1cd139a42c410e0c7b9e6014c3b3a # new feature and breaks kABI
+1b8f85defbc82e2eb8f27c5f6060ea507ad4d5a3 # optimization, not a bug fix
+f6c3c83db1d939ebdb8c8922748ae647d8126d91 # test fix for CONFIG_FTRACE_SYSCALLS=n
+07714b4bb3f9800261c8b4b2f47e9010ed60979d # related to persistent tracing ring buffers across reboots, which is not present in this codestream
+13d750c2c03e9861e15268574ed2c239cca9c9d5 # related to allowing system call enter/exit instrumentation to handle page faults, which is not present in this codestream
+1bd13edbbed6e7e396f1aab92b224a4775218e68 # new feature, not a bug fix
+66fc6f521a0b91051ce6968a216a30bc52267bf8 # new feature, not a bug fix
