--- a/blacklist.conf
+++ b/blacklist.conf
@@ -549,3 +549,4 @@ a02b0cde8ee515ee0c8efd33e7fbe6830c282e69 # Fix for scripts/gdb
 711b5875814b2a0e9a5aaf7a85ba7c80f5a389b1 # compile fix only
 3f36ee29e732b68044d531f47d31f22d265954c6 # 32 bit, selftests
 0d6efa20e384a41a7f4afdcd8a0aec442c19d33e # SPARC only
+d9c4037fed897ddcb512fdf03bafed9451cb5006 # Documentation for selftest
