--- a/series.conf
+++ b/series.conf
@@ -530,6 +530,7 @@
 	patches.kernel.org/6.17.3-458-Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
 	patches.kernel.org/6.17.3-459-Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
 	patches.kernel.org/6.17.3-460-Bluetooth-hci_sync-Fix-using-random-address-fo.patch
+	patches.kernel.org/6.17.3-461-KEYS-X.509-Fix-Basic-Constraints-CA-flag-parsi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
