--- a/series.conf
+++ b/series.conf
@@ -131,6 +131,7 @@
 	patches.kernel.org/6.17.3-059-arm64-dts-renesas-sparrow-hawk-Set-VDDQ18_25_A.patch
 	patches.kernel.org/6.17.3-060-libbpf-Export-bpf_object__prepare-symbol.patch
 	patches.kernel.org/6.17.3-061-firmware-arm_scmi-Mark-VirtIO-ready-before-reg.patch
+	patches.kernel.org/6.17.3-062-arm64-dts-imx93-kontron-Fix-GPIO-for-panel-reg.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
