--- a/series.conf
+++ b/series.conf
@@ -467,6 +467,7 @@
 	patches.kernel.org/6.17.3-395-wifi-ath12k-fix-wrong-logging-ID-used-for-CE.patch
 	patches.kernel.org/6.17.3-396-wifi-ath10k-avoid-unnecessary-wait-for-service.patch
 	patches.kernel.org/6.17.3-397-iommu-vt-d-debugfs-Fix-legacy-mode-page-table-.patch
+	patches.kernel.org/6.17.3-398-wifi-mac80211-fix-Rx-packet-handling-when-pubs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
