--- a/series.conf
+++ b/series.conf
@@ -562,6 +562,7 @@
 	patches.kernel.org/6.17.3-490-bpf-Skip-scalar-adjustment-for-BPF_NEG-if-dst-.patch
 	patches.kernel.org/6.17.3-491-bpf-Reject-negative-offsets-for-ALU-ops.patch
 	patches.kernel.org/6.17.3-492-tpm-Disable-TPM2_TCG_HMAC-by-default.patch
+	patches.kernel.org/6.17.3-493-ALSA-hda-hdmi-Add-pin-fix-for-HP-ProDesk-model.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
