--- a/series.conf
+++ b/series.conf
@@ -147,6 +147,7 @@
 	patches.kernel.org/6.17.3-075-ARM-at91-pm-fix-MCKx-restore-routine.patch
 	patches.kernel.org/6.17.3-076-arm64-dts-apple-t8103-j457-Fix-PCIe-ethernet-i.patch
 	patches.kernel.org/6.17.3-077-regulator-scmi-Use-int-type-to-store-negative-.patch
+	patches.kernel.org/6.17.3-078-selftests-futex-Fix-some-futex_numa_mpol-subte.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
